At this position i have formed the side bar section

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
-<h1>oh wherer are you going dude</h1>
+<div id="background_header"></div>
+<div id="background_body"></div>
+<div id="chatContainer">
+    <app-sidebar></app-sidebar>
+
+</div>
 <router-outlet></router-outlet>
