--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 body {
     margin: 0px;
+    font-family: sans-serif;
+    color: #545454;
+
+}
+
+a {
+    color: #45bf57;
+    text-decoration: none;
 }
